2007-04-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Move subgroups
	of health group to shimbun-asahi-subgroups-alist.
	(shimbun-asahi-subgroups-alist): Add subgroups for health group.
	(shimbun-asahi-prepare-article): Remove ads, don't fetch useless
	images, and don't replace From with reviewer for book groups;
	remove useless things for all groups.

	* shimbun/shimbun.el (shimbun-japanese-hankaku-region): Add a
	special treatment for zenkaku apostrophes.

2007-04-06  Matt Hodges  <M.P.Hodges@rl.ac.uk>

	* w3m.el (w3m-next-buffer): Fix last change when w3m-fb-mode.

2007-04-04  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-view-parent-page): Use numbered prefix argument to
	move the parent directory according to input number.

2007-04-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Add food group;
	remove life.food and shopping.kishi groups; move subgroups of
	book, business, car, culture, digital and edu groups to
	shimbun-asahi-subgroups-alist.
	(shimbun-asahi-subgroups-alist): Add subgroups for book, business,
	car, culture, digital, edu and food groups.
	(shimbun-asahi-get-headers): Remove shopping.kishi stuff.
	(shimbun-asahi-prepare-article): Add start and end flags for
	culture subgroups; remove ads for car, digital and food groups;
	use from header to split subgroups; remove shopping.kishi stuff.

2007-04-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Add book.asahi,
	book.business, book.clip, book.fair, book.mybook, book.rss groups;
	remove BOOK: prefix; update regexps for book.* and rss groups.
	(shimbun-asahi-subgroups-alist): Add subgroups for book.paperback
	group.
	(shimbun-index-url): Return about:blank if there's no url.
	(shimbun-asahi-get-headers): Work even if there's no regexp; work
	with book.rss group; simplify From for rss groups.
	(shimbun-asahi-prepare-article): Work with revised editorial and